Add API for tasks

--- a/fern/api/definition/api.yml
+++ b/fern/api/definition/api.yml
@@ -1,10 +1,5 @@
 name: api
 auth: bearer
 environments:
-  Production:
-    url: 
-    docs:
-  Sandbox:
-    url:
-    docs:
+  Production: https://api.mergent.co/v2
 default-environment: Production
