Add schedule service

--- a/fern/api/definition/task.yml
+++ b/fern/api/definition/task.yml
@@ -1,5 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fern-api/fern/main/fern.schema.json
 
+imports:
+  shared: shared.yml
+
 services:
   http:
     TaskService:
@@ -39,7 +42,10 @@ services:
         batchCreate:
           docs: |
             A maximum of 100 Tasks are accepted per request.
-            This operation is atomic: it will succeed for all Tasks or fail for all Tasks; there is no partial success.
+
+            This operation is atomic: it will succeed for all Tasks or fail for
+            all Tasks; there is no partial success.
+
             This endpoint is in beta and may change at any time without notice.
           method: POST
           path: /batch-create
@@ -54,59 +60,47 @@ types:
   CreateTaskRequest:
     properties:
       name:
-        docs: An optional name of the Task. This string must not contain more than 100 characters.
+        docs: |
+          An optional name of the Task. This string must not contain more than
+          100 characters.
         type: optional<string>
         availability: 
           status: deprecated
           message: To be removed on November 30, 2022.
-      request: HttpRequest
+      request: shared.HttpRequest
       scheduled_for:
         docs: |
-          The ISO 8601 timestamp for when the Task is scheduled to be executed. Example: "2021-10-01T15:53:05Z".
+          The [ISO 8601 timestamp](https://en.wikipedia.org/wiki/ISO_8601#Combined_date_and_time_representations)
+          for when the Task is scheduled to be executed.
+
+          Example: "2021-10-01T15:53:05Z".
+          
           When not present, the Task will be scheduled for immediate execution.
         type: optional<datetime>
       delay:
         docs: |
-          The ISO 8601 duration for the time to wait before the Task is executed. Example: "PT1M" for a delay of 1 minute.
-          When both `delay` and `scheduled_for` are present, `delay` will be added to `scheduled_for`.
+          The [ISO 8601 duration](https://en.wikipedia.org/wiki/ISO_8601#Durations)
+          for the time to wait before the Task is executed.
+          
+          Example: "PT1M" for a delay of 1 minute.
+          
+          When both `delay` and `scheduled_for` are present, `delay` will be
+          added to `scheduled_for`.
         type: string
   
-  HttpRequest:
-    properties:
-      url:
-        docs: |
-          The URL that the POST request will be sent to.
-          For localhost development, use something like ngrok to get a publicly accessible URL for your local service. See https://docs.mergent.co for more info.
-        type: string
-      headers:
-        docs: The headers that will accompany any Task's HTTP request. For example, you can use this to set Content-Type to "application/json" or "application/octet-stream".
-        type: optional<map<string, string>>
-      body:
-        docs: The HTTP request body
-        type: optional<string>
-
   Task:
+    extends: CreateTaskRequest
     properties:
       id:
         docs: A unique ID assigned upon creation.
         type: TaskId
-      name:
-        docs: The name of the task.
-        type: optional<string>
-        availability: 
-          status: deprecated
-          message: To be removed on November 30, 2022.
       status:
         docs: The status of this Task.
         type: TaskStatus
-      request: HttpRequest
-      scheduled_for:
-        docs: |
-          The ISO 8601 timestamp for when the Task is scheduled to be executed. Example: "2021-10-01T15:53:05Z".
-          When not present, the Task has been scheduled for immediate execution.
-        type: optional<datetime>
       created_at:
-        docs: The ISO 8601 timestamp representing when the object was created.
+        docs: |
+          The [ISO 8601 timestamp](https://en.wikipedia.org/wiki/ISO_8601#Combined_date_and_time_representations)
+          representing when the task was created.
         type: datetime
   
   TaskId: string
